k8s/conducteur-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conducteur-service
  namespace: conducteur-ns
spec:
  selector:
    app: conducteur-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
