k8s/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: maintenance-ns
spec:
  ports:
  - port: 9092
  selector:
    app: kafka
