k8s/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: maintenance-ns
spec:
  ports:
  - port: 2181
  selector:
    app: zookeeper
