k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vehicule-ingress
  namespace: vehicule-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: vehicule.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vehicule-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conducteur-ingress
  namespace: conducteur-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: conducteur.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: conducteur-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maintenance-ingress
  namespace: maintenance-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: maintenance.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: maintenance-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localisation-ingress
  namespace: localisation-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localisation.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: localisation-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evenement-ingress
  namespace: evenement-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: evenement.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: evenement-service
            port:
              number: 80
